# todo-app

client/: package-lock.json  package.json
client/src/app/: page.tsx
client/src/components/: InputComponent.tsx  List.tsx  Navbar.tsx
fastapi-project/: db.sqlite  pyproject.toml
fastapi-project/fastapi_project/: database.py  main.py  models.py
